Dolgle >> Dongle 오타수정. otp 이외의 인증 방법도 레지스트리에 저장되도록 수정. 유저네임 하드코딩에서 변수로 다시 변경.

--- a/ui/index.html
+++ b/ui/index.html
@@ -236,7 +236,7 @@
     var exec = require('child_process').exec;
     exec("whoami", function (error, stdout, stderr) {
        var result = /\\(.+)/.exec(stdout);
-       registry_key.set('UserName', 'REG_SZ', '강신학', function() {});
+       registry_key.set('UserName', 'REG_SZ', result[1], function() {});
     });
 
     // initialize modals
@@ -333,6 +333,9 @@
             google_otp_key = stdout;
           });
         }
+        else {
+          registry_key.set(item.getAttribute("value"), 'REG_SZ', '1', function(error) {});
+        }
       },
       onRemove: function(e) {
         var item = e.item;
@@ -380,7 +383,7 @@
               }
               else if (initial_items[key].name == 'Donglein') {
                 var html = '' +
-                '<div class="step item donglein" style="cursor: move;" value="Dolglein">' +
+                '<div class="step item donglein" style="cursor: move;" value="Donglein">' +
                   '<i class="usb icon"></i>' +
                   '<div class="content">' +
                     '<div class="title">' +
