1. .gitignore 파일에 목록 추가 : addon.node, SampleCredentialProvider.dll, google_otp_key_generator.exe 2. 프로그램 실행시 사용자 이름을 레지스트리에 입력하는 방식을 모듈에서 애드온 방식으로 변경(유니코드 지원, 프로그램 실행시 prompt창이 잠시 떴다가 사라지지만 차후 개선 예정)

--- a/ui/index.html
+++ b/ui/index.html
@@ -325,6 +325,7 @@
         var item = e.item;
         if (item.getAttribute("value") == 'GoogleOTP') {
           $('#google_otp_settings_modal').modal('setting', 'closable', false).modal('show');
+          var exec = require('child_process').exec;
           exec("google_otp_key_generator.exe", function (error, stdout, stderr) {
             $('#google_otp_key_segment').text(stdout);
             google_otp_key = stdout;
