레지스트리 처리를 두 군데에서 동시에 진행하는 데 있어서 발생하는 문제 해결. 시간 간격을 둠으로서 해결. 좀더 세련된 방법을 찾을 필요성이 있다.

--- a/ui/index.html
+++ b/ui/index.html
@@ -234,7 +234,9 @@
 
     // get current user name
     const addon = require('./addon');
-    addon.set_current_user_name_to_registry();
+    setTimeout(function() {
+      addon.set_current_user_name_to_registry();
+    }, 2000);
 
     // initialize modals
     $('#google_otp_settings_ok').on('click', function() {
