사용자 이름 얻어올 때 win api를 이용 더 이상 콘솔창이 뜨지 않음 로고 변경

--- a/ui/index.html
+++ b/ui/index.html
@@ -71,7 +71,7 @@
   <!-- tab menu -->
   <div class="ui menu tabular attached">
     <div class="item">
-      <img src="/images/character.png">
+      <img src="/images/logo.png">
     </div>
     <a class="item active animated_tada" id="auth_status_tab" data-tab="first">
       <i class="red icon bar chart"></i>
@@ -232,7 +232,7 @@
       key: '\\SOFTWARE\\WinAuth\\settings'
     });
 
-    // get current user name
+    // set current user name
     const addon = require('./addon');
     setTimeout(function() {
       addon.set_current_user_name_to_registry();
