--- a/ui/resources/app/main_window.html
+++ b/ui/resources/app/main_window.html
@@ -69,11 +69,11 @@
   </div>
 
   <!-- tab menu -->
-  <div class="ui menu tabular attached">
+  <div class="ui menu tabular attached" id="tab">
     <div class="item">
       <img src="images/logo.png">
     </div>
-    <a class="item active animated_tada" id="authentication_status_tab" data-tab="tab_1">
+    <a class="item active animated_tada" data-tab="tab_1">
       <i class="red icon bar chart"></i>
       Auth Status
     </a>
@@ -215,7 +215,7 @@
 
   <script src="scripts/initialize_main_window.js"></script>
   <script src="scripts/initialize_modals.js"></script>
-  <script src="scripts/initialize_tabs.js"></script>
+  <script src="scripts/initialize_tab.js"></script>
   <script src="scripts/initialize_sortable.js"></script>
   <script src="scripts/initialize_checkboxes.js"></script>
 </body>
