ui 프로그램의 메인 화면에 현재 설정 정보를 추가.

--- a/ui/resources/app/main_window.html
+++ b/ui/resources/app/main_window.html
@@ -184,6 +184,25 @@
             Current Settings
           </div>
         </h3>
+        <div class="ui divider"></div>
+        <h4 class="ui header" id="on_off_current_setting">
+          <i class="icon plug" style="color: red;"></i>
+          <div class="content">
+            Off
+          </div>
+        </h4>
+        <h4 class="ui header" id="hide_other_users_logon_tiles_current_setting">
+          <i class="icon close" style="color: #8A0917;"></i>
+          <div class="content">
+            Hide other users' logon tiles
+          </div>
+        </h4>
+        <h4 class="ui header" id="prohibit_fallback_credential_provider_current_setting">
+          <i class="icon close" style="color: #8A0917;"></i>
+          <div class="content">
+            Prohibit fallback credential provider
+          </div>
+        </h4>
       </div>
     </div>
   </div>
